--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ]
+      "packageRules": [
+        {
+            "description": "Only Update package.json",
+            "matchPackagePatterns": ["*"],
+            "matchFileNames": ["package.json"]
+            "minimumReleaseAge": "3 days"
+        }
 }
